Mobile (max 768px)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
-	<title>Effect | Na18k</title>
+	<meta name="viewport" content="width=device-width">
+
+	<title>GridNeon | Na18k</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="reset.css">
 </head>
