--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="container" align="center">
 	<div class="corpo" id="pai">
 		<a href="https://github.com/Na18k" class="link"><div class="quadrado">☆</div></a>
-		<a href="#" class="link"><div class="quadrado"></div></a>
+		<a href="https://github.com/Na18k/GridNeon" class="link"><div class="quadrado">☆</div></a>
 		<a href="#" class="link"><div class="quadrado"></div></a>
 		<a href="#" class="link"><div class="quadrado"></div></a>
 		<a href="#" class="link"><div class="quadrado"></div></a>
